Bugfix: drawing controls overlapped the barcode on some sheets

--- a/project.styl
+++ b/project.styl
@@ -232,6 +232,10 @@
       position: fixed
       top: 6em
       right: 48vw
+      min-width: 4em
+      width: auto
+      margin-left: auto
+      flex: none
   
   .drawing-controls
     
